--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a href="index.html" title="home" class="logo">
           <div id="logo">
 
-            <h1>Explore California:Affordable outdoor tours</h1>
+            <h1>Explore California</h1>
 
           </div>
         </a>
